Fix name and description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,7 +150,7 @@ import { GET } from "./word.json";
     });
 </script>
 
-<Layout title="Sementical, a word association game">
+<Layout title="Semantical">
   <main>
     <div id="graph"></div>
   </main>
