--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,7 +106,9 @@ import { GET } from "./word.json";
           node.__bckgDimensions = bckgDimensions; // to re-use in nodePointerAreaPaint
         })
         .onNodeClick(onNodeClick)
-        .linkWidth(10)
+        .linkWidth(6)
+        .linkColor(() => "rgba(128, 128, 256, 0.2)")
+        .linkDirectionalParticles(2)
         .linkCurvature(0.25)
         // .d3AlphaDecay(0)
         // .d3VelocityDecay(0.9)
