--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
+	<head data-theme="dark">
 		<meta charset="UTF-8" />
 		<meta name="description" content="A word association game" />
 		<meta name="viewport" content="width=device-width" />
