Absolutely position goal txt

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -282,7 +282,7 @@ import { GET } from "./word.json";
 
 <Layout title="Semantical">
   <main>
-    <h1 class="p-4 text-3xl" id="goal"></h1>
+    <h1 class="absolute p-4 text-3xl" id="goal"></h1>
     <div id="graph"><div class="w-[100vw] h-[100vh] flex items-center justify-center">
       <span class="loading loading-spinner loading-lg"></span>
     </div></div>
