Fix share button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -292,18 +292,8 @@ import { GET } from "./word.json";
         <p id="info" class="py-4"></p>
         <div class="modal-action">
           <form method="dialog">
-            <button id="share" class="btn btn-primary">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                class="stroke-current shrink-0 w-6 h-6"
-              >
-                Share</svg
-              >
-              <!-- if there is a button in form, it will close the modal -->
-              <button class="btn">Close</button>
-            </button>
+            <button id="share" class="btn btn-primary">Share</button>
+            <button class="btn">Close</button>
           </form>
         </div>
       </div>
