--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import { GET } from "./word.json";
   let lock = false;
   let clicks = 0;
   let won = false;
+  let capturing = false;
   const onNodeClick = async (node: any) => {
     node.clicked = true;
     Graph.centerAt(node.x, node.y, 1000);
@@ -70,6 +71,13 @@ import { GET } from "./word.json";
       data.words.map((word: string) => ({ source: node.id, target: word }))
     );
     if (nodes.find((n) => n.id === goal && !won)) {
+      Graph.zoomToFit(1000, 250);
+      capturing = true;
+      setTimeout(() => {
+        const png = document.querySelector("canvas")!.toDataURL("image/png");
+        document.getElementById("result")!.setAttribute("src", png);
+        capturing = false;
+      }, 1000);
       won = true;
       const dialog = document.getElementById("dialog") as HTMLDialogElement;
       dialog.showModal();
@@ -145,7 +153,7 @@ import { GET } from "./word.json";
             (n) => n + fontSize * 0.8
           ); // some padding
 
-          if (node.hover) {
+          if (node.hover && !won) {
             ctx.fillStyle = "rgba(255, 255, 255, 0.2)";
           } else {
             ctx.fillStyle = "rgba(50, 50, 50, 0.8)";
@@ -191,7 +199,7 @@ import { GET } from "./word.json";
             ctx.lineWidth = 2;
             ctx.stroke();
             ctx.closePath();
-          } else {
+          } else if (!capturing) {
             ctx.fillText(label, node.x, node.y);
           }
           nodesById[node.id] = node;
@@ -290,10 +298,10 @@ import { GET } from "./word.json";
       <div class="modal-box">
         <h3 class="font-bold text-lg">You win!</h3>
         <p id="info" class="py-4"></p>
+        <img id="result" class="w-full" />
         <div class="modal-action">
           <form method="dialog">
             <button id="share" class="btn btn-primary">Share</button>
-            <button class="btn">Close</button>
           </form>
         </div>
       </div>
