--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,8 +7,8 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head data-theme="dark">
+<html lang="en" data-theme="dark">
+	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="A word association game" />
 		<meta name="viewport" content="width=device-width" />
@@ -20,32 +20,3 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
